--- a/PlatoWarpMenu/PlatoWarpMenu.csproj
+++ b/PlatoWarpMenu/PlatoWarpMenu.csproj
@@ -20,9 +20,21 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="fonts\escrita.fnt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="fonts\escrita_0.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="fonts\opensans.fnt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="fonts\opensans_0.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Import Project="$(SolutionDir)\common.targets" />
-
-  <ProjectExtensions><VisualStudio><UserProperties manifest_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
-
 
 </Project>
