--- a/PlatoWarpMenu/PlatoWarpMenu.csproj
+++ b/PlatoWarpMenu/PlatoWarpMenu.csproj
@@ -33,6 +33,15 @@
     <None Update="fonts\opensans_0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="i18n\de.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="i18n\default.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="i18n\zh.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
