--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -8,7 +8,7 @@
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
 
-    <EnableHarmony>true</EnableHarmony>
+    <EnableHarmony>false</EnableHarmony>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetZip" Version="1.13.7" />
+    <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
     <PackageReference Include="MoonSharp" Version="2.0.0.0" />
     <PackageReference Include="ncalc" Version="1.3.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -46,6 +47,9 @@
   </ItemGroup>
   
   <ItemGroup>
+  <Reference Include="2Harmony">
+    <HintPath>lib\2Harmony.dll</HintPath>
+  </Reference>
   <Reference Include="TMXTile">
     <HintPath>$(GamePath)\smapi-internal\TMXTile.dll</HintPath>
     <Private>False</Private>
