--- a/ScaleUp/ScaleUp.csproj
+++ b/ScaleUp/ScaleUp.csproj
@@ -8,10 +8,11 @@
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
 
-    <EnableHarmony>true</EnableHarmony>
+    <EnableHarmony>false</EnableHarmony>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
   </ItemGroup>
 
