--- a/TMX_BusPeople/TMX_BusPeople.csproj
+++ b/TMX_BusPeople/TMX_BusPeople.csproj
@@ -24,4 +24,6 @@
 
   <Import Project="$(SolutionDir)\common.targets" />
 
+  <ProjectExtensions><VisualStudio><UserProperties manifest_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
