--- a/Comics/manifest.json
+++ b/Comics/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Comics",
   "Author": "Platonymous",
-  "Version": "1.0.2",
+  "Version": "1.3.0",
   "Description": "Buy comics from Pierre",
   "UniqueID": "Platonymous.Comics",
   "EntryDll": "Comics.dll",
@@ -10,6 +10,16 @@
   "Dependencies": [
     {
       "UniqueID": "Platonymous.Toolkit"
+    },
+    {
+      "UniqueID": "Platonymous.ModUpdater",
+      "IsRequired": false
     }
-  ]
+  ],
+  "ModUpdater": {
+    "Repository": "Stardew-Valley-Mods",
+    "User": "Platonymous",
+    "Directory": "_releases",
+    "ModFolder": "Comics"
+  }
 }
