--- a/ShipFromInventory/manifest.json
+++ b/ShipFromInventory/manifest.json
@@ -1,10 +1,22 @@
 ﻿{
   "Name": "ShipFromInventory",
   "Author": "Platonymous",
-  "Version": "1.2.4",
+  "Version": "1.3.0",
   "Description": "Ship from the Inventory Menu",
   "UniqueID": "Platonymous.ShipFromInventory",
   "EntryDll": "ShipFromInventory.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:3219" ]
+  "UpdateKeys": [ "Nexus:3219" ],
+  "Dependencies": [
+    {
+      "UniqueID": "Platonymous.ModUpdater",
+      "IsRequired": false
+    }
+  ],
+  "ModUpdater": {
+    "Repository": "Stardew-Valley-Mods",
+    "User": "Platonymous",
+    "Directory": "_releases",
+    "ModFolder": "ShipFromInventory"
+  }
 }
