--- a/Comics/manifest.json
+++ b/Comics/manifest.json
@@ -1,19 +1,20 @@
 ﻿{
   "Name": "Comics",
   "Author": "Platonymous",
-  "Version": "1.3.0",
+  "Version": "2.0.3",
   "Description": "Buy comics from Pierre",
   "UniqueID": "Platonymous.Comics",
   "EntryDll": "Comics.dll",
-  "MinimumApiVersion": "2.11",
+  "MinimumApiVersion": "3.2.0",
   "UpdateKeys": [ "Nexus:6281" ],
   "Dependencies": [
     {
-      "UniqueID": "Platonymous.Toolkit"
-    },
-    {
       "UniqueID": "Platonymous.ModUpdater",
       "IsRequired": false
+    },
+    {
+      "UniqueID": "Platonymous.PlatoTK",
+      "MinimumVersion": "1.1.4"
     }
   ],
   "ModUpdater": {
