--- a/PlatoWarpMenu/manifest.json
+++ b/PlatoWarpMenu/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Plato Warp Menu",
   "Author": "Platonymous",
-  "Version": "1.2.2",
+  "Version": "1.7.13",
   "Description": "Platonymous Warp Menu",
   "UniqueID": "Platonymous.PlatoWarpMenu",
   "EntryDll": "PlatoWarpMenu.dll",
@@ -9,8 +9,8 @@
   "UpdateKeys": [ "Nexus:5384" ],
   "Dependencies": [
     {
-      "UniqueID": "Platonymous.Toolkit",
-      "MinimumVersion": "1.14.1"
+      "UniqueID": "Platonymous.PlatoTK",
+      "MinimumVersion": "1.1.4"
     }
   ]
 }
