switch to PlatoTK

--- a/SeedBag/manifest.json
+++ b/SeedBag/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Seed Bag",
   "Author": "Platonymous",
-  "Version": "1.4.0",
+  "Version": "1.6.5",
   "Description": "Adds a Seed Bag to the Game",
   "UniqueID": "Platonymous.SeedBag",
   "EntryDll": "SeedBag.dll",
@@ -9,10 +9,14 @@
   "UpdateKeys": [ "Nexus:1133" ],
   "Dependencies": [
     {
-      "UniqueID": "Platonymous.Toolkit"
+      "UniqueID": "Platonymous.PlatoTK"
     },
     {
       "UniqueID": "Platonymous.ModUpdater",
+      "IsRequired": false
+    },
+    {
+      "UniqueID": "Platonymous.Toolkit",
       "IsRequired": false
     }
   ],
