--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <AssemblyName>PyTK</AssemblyName>
     <RootNamespace>PyTK</RootNamespace>
-    <Version>1.13.36</Version>
+    <Version>1.19.0</Version>
     <TargetFramework>net452</TargetFramework>
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
 
-    <EnableHarmony>false</EnableHarmony>
+    <EnableHarmony>true</EnableHarmony>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
@@ -37,9 +37,13 @@
     <Product>Platonymous.PyTK</Product>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="DotNetZip" Version="1.13.7" />
-    <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
     <PackageReference Include="MoonSharp" Version="2.0.0.0" />
     <PackageReference Include="ncalc" Version="1.3.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
