--- a/PlatoWarpMenu/manifest.json
+++ b/PlatoWarpMenu/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Plato Warp Menu",
   "Author": "Platonymous",
-  "Version": "1.7.13",
+  "Version": "1.7.16",
   "Description": "Platonymous Warp Menu",
   "UniqueID": "Platonymous.PlatoWarpMenu",
   "EntryDll": "PlatoWarpMenu.dll",
@@ -10,7 +10,11 @@
   "Dependencies": [
     {
       "UniqueID": "Platonymous.PlatoTK",
-      "MinimumVersion": "1.1.4"
+      "MinimumVersion": "1.2.0"
+    },
+    {
+      "UniqueID": "Platonymous.Toolkit",
+      "IsRequired": false
     }
   ]
 }
