--- a/TMXLoader/TMXLoader.csproj
+++ b/TMXLoader/TMXLoader.csproj
@@ -41,4 +41,6 @@
 
   <Import Project="$(SolutionDir)\common.targets" />
 
+  <ProjectExtensions><VisualStudio><UserProperties manifest_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
