--- a/CustomMusic/manifest.json
+++ b/CustomMusic/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "CustomMusic",
   "Author": "Platonymous",
-  "Version": "1.7.3",
+  "Version": "1.8.0",
   "Description": "Changes the games music",
   "UniqueID": "Platonymous.CustomMusic",
   "EntryDll": "CustomMusic.dll",
@@ -10,6 +10,10 @@
   "Dependencies": [
     {
       "UniqueID": "Platonymous.ModUpdater",
+      "IsRequired": false
+    },
+    {
+      "UniqueID": "spacechase0.GenericModConfigMenu",
       "IsRequired": false
     }
   ],
