--- a/CustomTV/CustomTV.csproj
+++ b/CustomTV/CustomTV.csproj
@@ -19,4 +19,6 @@
     <PackageReference Include="Platonymous.PlatoTK" Version="1.3.9" />
   </ItemGroup>
 
+  <Import Project="$(SolutionDir)\common.targets" />
+
 </Project>
