--- a/PelicanTTS/PelicanTTS.csproj
+++ b/PelicanTTS/PelicanTTS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>PelicanTTS</AssemblyName>
     <RootNamespace>PelicanTTS</RootNamespace>
-    <Version>1.8.4</Version>
+    <Version>1.9.0-alpha</Version>
     <TargetFramework>net452</TargetFramework>
     <Platforms>x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
@@ -12,12 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.5.0-beta" />
-    <PackageReference Include="AWSSDK.Polly" Version="3.5.0-beta" />
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.5.3.6" />
+    <PackageReference Include="AWSSDK.Polly" Version="3.5.1.40" />
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.2.2" />
     <PackageReference Include="Platonymous.Ogg2XNA" Version="1.1.0" />
   </ItemGroup>
-
+  
   <Import Project="$(SolutionDir)\common.targets" />
 
 </Project>
