--- a/ModUpdater/ModUpdater.csproj
+++ b/ModUpdater/ModUpdater.csproj
@@ -5,6 +5,8 @@
     <RootNamespace>ModUpdater</RootNamespace>
     <TargetFramework>net462</TargetFramework>
     <Version>1.1.0</Version>
+
+    <EnableHarmony>true</EnableHarmony>
   </PropertyGroup>
 
   <ItemGroup>
