update for Stardew Valley 1.5.5
This commit...

* updates the mod build package;
* updates target frameworks;
* updates how mods bundle  extra dependencies for the .NET 5 changes;
* fixes a naming conflict with the new System.Range type;
* removes references to bloom code which no longer exists.

Known issues:
* Custom Music depends on Platonymous.Ogg2XNA, which still references XNA Framework instead of MonoGame.

--- a/Arcade2048/Arcade2048.csproj
+++ b/Arcade2048/Arcade2048.csproj
@@ -3,19 +3,13 @@
   <PropertyGroup>
     <AssemblyName>Arcade2048</AssemblyName>
     <RootNamespace>Arcade2048</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>1.4.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Platonymous.PlatoTK">
-      <HintPath>$(GamePath)\Mods\PlatoTK\PlatoTK.dll</HintPath>
-      <Private>False</Private>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
+    <Reference Include="Platonymous.PlatoTK" HintPath="$(GamePath)\Mods\PlatoTK\PlatoTK.dll" Private="false" />
   </ItemGroup>
-
-
 
   <Import Project="$(SolutionDir)\common.targets" />
 
