--- a/Notes/Notes.csproj
+++ b/Notes/Notes.csproj
@@ -4,13 +4,11 @@
     <AssemblyName>Notes</AssemblyName>
     <RootNamespace>Notes</RootNamespace>
     <Version>1.1.0</Version>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
