--- a/ArcadeSnake/ArcadeSnake.csproj
+++ b/ArcadeSnake/ArcadeSnake.csproj
@@ -3,18 +3,13 @@
   <PropertyGroup>
     <AssemblyName>Snake</AssemblyName>
     <RootNamespace>Snake</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>1.4.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Platonymous.PlatoTK">
-      <HintPath>$(GamePath)\Mods\PlatoTK\PlatoTK.dll</HintPath>
-      <Private>False</Private>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
+    <Reference Include="Platonymous.PlatoTK" HintPath="$(GamePath)\Mods\PlatoTK\PlatoTK.dll" Private="false" />
   </ItemGroup>
-
 
   <Import Project="$(SolutionDir)\common.targets" />
 
