--- a/ChessBoard/ChessBoard.csproj
+++ b/ChessBoard/ChessBoard.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <AssemblyName>ChessBoard</AssemblyName>
     <RootNamespace>ChessBoard</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>0.10.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj" />
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
