--- a/CustomFarmingRedux/CustomFarmingRedux.csproj
+++ b/CustomFarmingRedux/CustomFarmingRedux.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>CustomFarmingRedux</AssemblyName>
     <RootNamespace>CustomFarmingRedux</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>2.12.11</Version>
   </PropertyGroup>
 
@@ -12,9 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
