--- a/CustomFurniture/CustomFurniture.csproj
+++ b/CustomFurniture/CustomFurniture.csproj
@@ -3,23 +3,18 @@
   <PropertyGroup>
     <AssemblyName>CustomFurniture</AssemblyName>
     <RootNamespace>CustomFurniture</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>0.12.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Furniture\non-cp-packs-go-here.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Furniture\non-cp-packs-go-here.txt" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
 
 </Project>
-
