--- a/CustomTV/CustomTV.csproj
+++ b/CustomTV/CustomTV.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <AssemblyName>CustomTV</AssemblyName>
     <RootNamespace>CustomTV</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>1.3.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Platonymous.PlatoTK" Version="1.8.8" />
+    <Reference Include="Platonymous.PlatoTK" HintPath="$(GamePath)\Mods\PlatoTK\PlatoTK.dll" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
