--- a/CustomWallsAndFloorsRedux/CustomWallsAndFloorsRedux.csproj
+++ b/CustomWallsAndFloorsRedux/CustomWallsAndFloorsRedux.csproj
@@ -3,14 +3,12 @@
   <PropertyGroup>
     <AssemblyName>CustomWallsAndFloorsRedux</AssemblyName>
     <RootNamespace>CustomWallsAndFloorsRedux</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>2.1.7</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
