--- a/GhostTown/GhostTown.csproj
+++ b/GhostTown/GhostTown.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <AssemblyName>GhostTown</AssemblyName>
     <RootNamespace>GhostTown</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>1.0.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj" />
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
