--- a/JoJaBan/JoJaBan.csproj
+++ b/JoJaBan/JoJaBan.csproj
@@ -3,14 +3,12 @@
   <PropertyGroup>
     <AssemblyName>JoJaBan</AssemblyName>
     <RootNamespace>JoJaBan</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>0.5.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
