--- a/SleepWorker/SleepWorker.csproj
+++ b/SleepWorker/SleepWorker.csproj
@@ -4,13 +4,11 @@
     <AssemblyName>SleepWorker</AssemblyName>
     <RootNamespace>SleepWorker</RootNamespace>
     <Version>1.2.3</Version>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\PyTK\PyTK.csproj" Private="false" />
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
