--- a/PelicanTTS/PelicanTTS.csproj
+++ b/PelicanTTS/PelicanTTS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>PelicanTTS</AssemblyName>
     <RootNamespace>PelicanTTS</RootNamespace>
-    <Version>1.12.6</Version>
+    <Version>1.13.1</Version>
     <TargetFramework>net5.0</TargetFramework>
 
     <BundleExtraAssemblies>ThirdParty</BundleExtraAssemblies>
@@ -14,7 +14,8 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.7.0.10" />
     <PackageReference Include="AWSSDK.Polly" Version="3.7.0.9" />
-    <PackageReference Include="Platonymous.Ogg2XNA" Version="1.1.0" />
+    <PackageReference Include="NAudio.Core" Version="2.0.0" />
+    <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
   </ItemGroup>
 
 </Project>
