fix: update harp dependencies

--- a/HarpOfYobaRedux/HarpOfYobaRedux.csproj
+++ b/HarpOfYobaRedux/HarpOfYobaRedux.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,5 +17,9 @@
   </ItemGroup>
 
   <Import Project="$(SolutionDir)\common.targets" />
+
+  <ItemGroup>
+    <PackageReference Update="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
+  </ItemGroup>
 
 </Project>
